(ocamllex lexer)

(library
 (name lexer)
 (modules lexer)
 (libraries lexical))

(library
 (name lexical)
 (modules lexical)
 (preprocess
  (pps ppx_sexp_conv))
 (libraries sexplib))

(menhir
 (modules parser)
 (flags --dump --external-tokens=Lexical.Token --table)
 (infer true))

(library
 (name parser)
 (modules parser)
 (libraries syntactics menhirLib))

(library
 (name syntactics)
 (modules syntactics)
 (preprocess
  (pps ppx_sexp_conv))
 (libraries lexical sexplib))
